add apyori packages

--- a/Pipfile
+++ b/Pipfile
@@ -6,9 +6,10 @@ name = "pypi"
 [packages]
 numpy = "*"
 pandas = "*"
+apyori = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.11"
-python_full_version = "3.11.5"
+python_version = "3.12"
+python_full_version = "3.12.1"
